<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_provider_description">Provider of drinknomore to access data</string>
    <string name="app_provider_name">Provider of drinknomore</string>
    <string name="btnParametres_valider">Valider</string>
    <string name="common_create">Create</string>
    <string name="common_delete">Del</string>
    <string name="common_edit">Edit</string>
    <string name="dialog_delete_message">Are you sure you want to delete this item ?</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="lblParametres">Paramètres</string>
    <string name="lblParametres_horaire">Horaire</string>
    <string name="lblParametres_horaire_dimanche">Dimanche</string>
    <string name="lblParametres_horaire_jeudi">Jeudi</string>
    <string name="lblParametres_horaire_lundi">Lundi</string>
    <string name="lblParametres_horaire_mardi">Mardi</string>
    <string name="lblParametres_horaire_mercredi">Mercredi</string>
    <string name="lblParametres_horaire_samedi">Samedi</string>
    <string name="lblParametres_horaire_vendredi">Vendredi</string>
    <string name="lblParametres_jours">Jours de la semaine</string>
    <string name="main_parametres">Paramètres</string>
    <string name="main_play">Jouer</string>
    <string name="main_stats">Statistiques</string>
    <string name="main_questions">Liste des questions</string>
    <string name="main_reponses">Liste des réponses</string>
    <string name="menu_item_create">Add</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_save">Save</string>
    <string name="questions_arguments_invalid_field_error">Field Arguments is invalid.</string>
    <string name="questions_arguments_label">Arguments</string>
    <string name="questions_empty_list">Questions list is empty !</string>
    <string name="questions_enigme_invalid_field_error">Field Enigme is invalid.</string>
    <string name="questions_enigme_label">Enigme</string>
    <string name="questions_error_create">Questions creation error…</string>
    <string name="questions_error_edit">Questions edition error…</string>
    <string name="questions_not_found">No Questions found to display…</string>
    <string name="questions_progress_load_message">Questions is loading…</string>
    <string name="questions_progress_load_relations_message">Questions related entities are loading...</string>
    <string name="questions_progress_load_relations_title">Questions related entities loading</string>
    <string name="questions_progress_load_title">Questions Loading progress</string>
    <string name="questions_progress_save_message">Questions is saving to database…</string>
    <string name="questions_progress_save_title">Questions save progress</string>
    <string name="questions_question_invalid_field_error">Field Question is invalid.</string>
    <string name="questions_question_label">Question</string>
    <string name="questions_reponse_dialog_title">Select reponse</string>
    <string name="questions_reponse_invalid_field_error">Field Reponse is invalid.</string>
    <string name="questions_reponse_label">Reponse</string>
    <string name="reponses_arguments_invalid_field_error">Field Arguments is invalid.</string>
    <string name="reponses_arguments_label">Arguments</string>
    <string name="reponses_empty_list">Reponses list is empty !</string>
    <string name="reponses_error_create">Reponses creation error…</string>
    <string name="reponses_error_edit">Reponses edition error…</string>
    <string name="reponses_not_found">No Reponses found to display…</string>
    <string name="reponses_progress_load_message">Reponses is loading…</string>
    <string name="reponses_progress_load_relations_message">Reponses related entities are loading...</string>
    <string name="reponses_progress_load_relations_title">Reponses related entities loading</string>
    <string name="reponses_progress_load_title">Reponses Loading progress</string>
    <string name="reponses_progress_save_message">Reponses is saving to database…</string>
    <string name="reponses_progress_save_title">Reponses save progress</string>
    <string name="reponses_question_dialog_title">Select question</string>
    <string name="reponses_question_invalid_field_error">Field Question is invalid.</string>
    <string name="reponses_question_label">Question</string>
    <string name="reponses_questions_dialog_title">Select questions</string>
    <string name="reponses_questions_invalid_field_error">Field Questions is invalid.</string>
    <string name="reponses_questions_label">Questions</string>
    <string name="reponses_reponse_invalid_field_error">Field Reponse is invalid.</string>
    <string name="reponses_reponse_label">Reponse</string>
    <string name="reponses_solution_invalid_field_error">Field Solution is invalid.</string>
    <string name="reponses_solution_label">Solution</string>
    <string name="statistiques_date_date_title">Select date date</string>
    <string name="statistiques_date_invalid_field_error">Field Date is invalid.</string>
    <string name="statistiques_date_label">Date</string>
    <string name="statistiques_date_time_title">Select date time</string>
    <string name="statistiques_empty_list">Statistiques list is empty !</string>
    <string name="statistiques_error_create">Statistiques creation error…</string>
    <string name="statistiques_error_edit">Statistiques edition error…</string>
    <string name="statistiques_nberreurs_invalid_field_error">Field Nberreurs is invalid.</string>
    <string name="statistiques_nberreurs_label">Nberreurs</string>
    <string name="statistiques_not_found">No Statistiques found to display…</string>
    <string name="statistiques_progress_load_message">Statistiques is loading…</string>
    <string name="statistiques_progress_load_title">Statistiques Loading progress</string>
    <string name="statistiques_progress_save_message">Statistiques is saving to database…</string>
    <string name="statistiques_progress_save_title">Statistiques save progress</string>
    <string name="timeWidget_Parametres_horaire"></string>
    <string name="time_Parametres_horaire"></string>
    <string name="uri_not_supported">URI not supported</string>
    <string name="jeu_txtTitle">Jeu</string>
    <string name="jeu_txtEnigme">Question</string>
    <string name="jeu_txtReponse">Reponse</string>
    <string name="jeu_btnValider">Valider</string>
    <string name="Jeu_Radio_Rep1">Reponse1</string>
    <string name="Jeu_Radio_Rep2">Reponse2</string>
    <string name="Jeu_Radio_Rep3">Reponse3</string>
    <string name="Jeu_Radio_Rep4">Reponse4</string>
    <string name="Jeu_BonneReponse">Bonne réponse</string>
    <string name="Jeu_MauvaiseReponse">Try Again</string>
    <string name="Jeu_ErreurDonnees">Erreur lors du chargement des données</string>
    <string name="Jeu_Nb_Erreurs">nb_erreurs</string>
    <string name="Parametres_cb_horaire_lundi">cb_horaire_lundi</string>
    <string name="Parametres_cb_horaire_mardi">cb_horaire_mardi</string>
    <string name="Parametres_cb_horaire_jeudi">cb_horaire_jeudi</string>
    <string name="Parametres_cb_horaire_mercredi">cb_horaire_mercredi</string>
    <string name="Parametres_cb_horaire_vendredi">cb_horaire_vendredi</string>
    <string name="Parametres_cb_horaire_samedi">cb_horaire_samedi</string>
    <string name="Parametres_cb_horaire_dimanche">cb_horaire_dimanche</string>
    <string name="Parametres_timeWidget_horaire">timeWidget_Parametres_horaire</string>
    <string name="app_name_youtube">Youtube Player</string>
    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_youtube">Youtube Test</string>
    <string name="btn_skip_music">Skip Music</string>
</resources>
