<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:id="@+id/homeLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">
                <Button
            android:id="@+id/reponses_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="List all Reponses" />
        <Button
            android:id="@+id/questions_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="List all Questions" />
        <Button
            android:id="@+id/statistiques_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="List all Statistiques" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_play" />

        <Button
            android:id="@+id/btn_parametres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_parametres" />

        <Button
            android:id="@+id/btn_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_youtube" />

    </LinearLayout>
</ScrollView>

