<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:id="@+id/reponses_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" >
            <TextView
                android:id="@+id/reponses_solution_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reponses_solution_label"/>
            <TextView
                android:id="@+id/reponses_solution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/reponses_solution_label" />
            <TextView
                android:id="@+id/reponses_arguments_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reponses_solution"
                android:text="@string/reponses_arguments_label"/>
            <TextView
                android:id="@+id/reponses_arguments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/reponses_arguments_label" />
            <TextView
                android:id="@+id/reponses_question_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reponses_arguments"
                android:text="@string/reponses_question_label"/>
            <TextView
                android:id="@+id/reponses_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/reponses_question_label" />
        </RelativeLayout>
    </ScrollView>
    <TextView
        android:id="@+id/reponses_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/reponses_not_found" />
</RelativeLayout>
