<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:harmony="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   <TextView
        android:id="@+id/questions_enigme_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questions_enigme_label"/>
    <EditText
        android:id="@+id/questions_enigme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/questions_enigme_label" />
   <TextView
        android:id="@+id/questions_arguments_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questions_enigme"
        android:text="@string/questions_arguments_label"/>
    <EditText
        android:id="@+id/questions_arguments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/questions_arguments_label" />
    <TextView
        android:id="@+id/questions_reponse_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questions_arguments"
        android:text="@string/questions_reponse_label"/>
    <com.coyote.drinknomore.harmony.widget.MultiEntityWidget
        android:id="@+id/questions_reponse_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questions_reponse_label" />
</RelativeLayout>
