<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:harmony="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   <TextView
        android:id="@+id/reponses_solution_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reponses_solution_label"/>
    <EditText
        android:id="@+id/reponses_solution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/reponses_solution_label" />
   <TextView
        android:id="@+id/reponses_arguments_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reponses_solution"
        android:text="@string/reponses_arguments_label"/>
    <EditText
        android:id="@+id/reponses_arguments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/reponses_arguments_label" />
    <TextView
        android:id="@+id/reponses_question_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reponses_arguments"
        android:text="@string/reponses_question_label"/>
    <com.coyote.drinknomore.harmony.widget.SingleEntityWidget
        android:id="@+id/reponses_question_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reponses_question_label" />
</RelativeLayout>
