<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <RelativeLayout
            android:id="@+id/statistiques_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" >
            <TextView
                android:id="@+id/statistiques_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/statistiques_date_label"/>
            <TextView
                android:id="@+id/statistiques_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/statistiques_date_label" />
            <TextView
                android:id="@+id/statistiques_nberreurs_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statistiques_date"
                android:text="@string/statistiques_nberreurs_label"/>
            <TextView
                android:id="@+id/statistiques_nberreurs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:layout_below="@+id/statistiques_nberreurs_label" />
        </RelativeLayout>
    </ScrollView>
    <TextView
        android:id="@+id/statistiques_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/statistiques_not_found" />
</RelativeLayout>
